# lxqt-policykit

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  lxqt-policykit-agent.ts  lxqt-policykit-agent_ar.ts  lxqt-policykit-agent_ca.ts  lxqt-policykit-agent_cs.ts  lxqt-policykit-agent_da.ts  lxqt-policykit-agent_de.ts  lxqt-policykit-agent_el.ts  lxqt-policykit-agent_es.ts  lxqt-policykit-agent_fr.ts  lxqt-policykit-agent_hu.ts  lxqt-policykit-agent_id.ts  lxqt-policykit-agent_it.ts  lxqt-policykit-agent_lt.ts  lxqt-policykit-agent_nl.ts  lxqt-policykit-agent_pl.ts  lxqt-policykit-agent_pt.ts  lxqt-policykit-agent_ru.ts  lxqt-policykit-agent_tr.ts  lxqt-policykit-agent_uk.ts  lxqt-policykit-agent_zh_CN.ts
autostart/: CMakeLists.txt  lxqt-policykit-agent.desktop  lxqt-policykit-agent.desktop.in
autostart/translations/: lxqt-policykit-agent_ar.desktop  lxqt-policykit-agent_ar.desktop.yaml  lxqt-policykit-agent_bg.desktop.yaml  lxqt-policykit-agent_ca.desktop  lxqt-policykit-agent_ca.desktop.yaml  lxqt-policykit-agent_cs.desktop  lxqt-policykit-agent_cs.desktop.yaml  lxqt-policykit-agent_cs_CZ.desktop  lxqt-policykit-agent_da.desktop  lxqt-policykit-agent_da.desktop.yaml  lxqt-policykit-agent_da_DK.desktop  lxqt-policykit-agent_de.desktop.yaml  lxqt-policykit-agent_de_DE.desktop  lxqt-policykit-agent_el.desktop.yaml  lxqt-policykit-agent_el_GR.desktop  lxqt-policykit-agent_eo.desktop  lxqt-policykit-agent_eo.desktop.yaml  lxqt-policykit-agent_es.desktop  lxqt-policykit-agent_es.desktop.yaml  lxqt-policykit-agent_es_VE.desktop  lxqt-policykit-agent_es_VE.desktop.yaml  lxqt-policykit-agent_et.desktop.yaml  lxqt-policykit-agent_eu.desktop  lxqt-policykit-agent_eu.desktop.yaml  lxqt-policykit-agent_fi.desktop  lxqt-policykit-agent_fi.desktop.yaml  lxqt-policykit-agent_fr.desktop.yaml  lxqt-policykit-agent_fr_FR.desktop  lxqt-policykit-agent_gl.desktop.yaml  lxqt-policykit-agent_he.desktop.yaml  lxqt-policykit-agent_hr.desktop  lxqt-policykit-agent_hr.desktop.yaml  lxqt-policykit-agent_hu.desktop  lxqt-policykit-agent_hu.desktop.yaml  lxqt-policykit-agent_it.desktop.yaml  lxqt-policykit-agent_it_IT.desktop  lxqt-policykit-agent_ja.desktop  lxqt-policykit-agent_ja.desktop.yaml  lxqt-policykit-agent_ka.desktop.yaml  lxqt-policykit-agent_kk.desktop.yaml  (+33 more)
cmake/: LxQtTranslate.cmake
man/: lxqt-policykit-agent.1
src/: main.cpp  policykitagent.cpp  policykitagent.h  policykitagentgui.cpp  policykitagentgui.h
translations/: CMakeLists.txt  lxqt-policykit-agent.ts  lxqt-policykit-agent_ar.ts  lxqt-policykit-agent_arn.ts  lxqt-policykit-agent_ast.ts  lxqt-policykit-agent_bg.ts  lxqt-policykit-agent_ca.ts  lxqt-policykit-agent_cs.ts  lxqt-policykit-agent_cy.ts  lxqt-policykit-agent_da.ts  lxqt-policykit-agent_de.ts  lxqt-policykit-agent_el.ts  lxqt-policykit-agent_en_GB.ts  lxqt-policykit-agent_es.ts  lxqt-policykit-agent_et.ts  lxqt-policykit-agent_eu.ts  lxqt-policykit-agent_fi.ts  lxqt-policykit-agent_fr.ts  lxqt-policykit-agent_gl.ts  lxqt-policykit-agent_he.ts  lxqt-policykit-agent_hr.ts  lxqt-policykit-agent_hu.ts  lxqt-policykit-agent_id.ts  lxqt-policykit-agent_it.ts  lxqt-policykit-agent_ja.ts  lxqt-policykit-agent_ka.ts  lxqt-policykit-agent_kab.ts  lxqt-policykit-agent_kk.ts  lxqt-policykit-agent_ko.ts  lxqt-policykit-agent_lg.ts  lxqt-policykit-agent_lt.ts  lxqt-policykit-agent_nb_NO.ts  lxqt-policykit-agent_nl.ts  lxqt-policykit-agent_oc.ts  lxqt-policykit-agent_pa.ts  lxqt-policykit-agent_pl.ts  lxqt-policykit-agent_pt.ts  lxqt-policykit-agent_ro.ts  lxqt-policykit-agent_ru.ts  lxqt-policykit-agent_ru_RU.ts  (+7 more)
